# pr-monitor

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
pr_monitor/: __init__.py  app.py
