[project]
name = "pr-monitor"
version = "0.1.0"
description = "A unified GitHub PR dashboard for monitoring pull requests across multiple accounts and repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.63.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
]

[project.scripts]
pr-monitor = "pr_monitor.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
